2006-01-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/plumber.py:
	Check for the gstreamer 0.10 (and not 0.9) gconf keys.

2005-12-24  Edward Hervey  <edward@fluendo.com>

	0.9.9.1 release
	
	* RELEASE:
	* bin/pitivi.in:
	Switch on threads
	* configure.ac:
	0.9.9.1 release (thanks a lot stupid sourceforge)
	* pitivi/bin.py:
	don't seek back to the beginning after recording in fact
	* pitivi/ui/glade.py:
	esthetic fixes
	* pitivi/ui/viewer.py:
	Deactivate record button since it doesn't work 100% yet

2005-12-21  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Bump requirement to gst(-python) 0.10.0
	* pitivi/bin.py:
	Correct seek when stoping recording
	* pitivi/discoverer.py:
	Correctly emit 'finished-analyzing' when the discoverer
	has finished analyzing a uri.
	* pitivi/sourcelist.py:
	Remove 'file-is-valid' signal.
	The SourceList now only emits the 'file-added' signal
	when the file was correctly discovered.
	* pitivi/ui/gstwidget.py:
	Add debugging
	* pitivi/ui/sourcefactories.py:
	Use the new Discoverer/SourceList design
	Add the FileSourceFactory to the gtk.TreeModel only, and when,
	the uri was properly discovered.
	* pitivi/ui/viewer.py:
	Properly update the displaid duration when the timeline
	duration changes

2005-12-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/Makefile.am:
	Add utils.py to the list of dist-ed files
	* pitivi/bin.py:
	Fixes for the encoding bin for SmartTimelineBin
	* pitivi/playground.py:
	cleanup
	* pitivi/settings.py:
	Default audio encoder is now vorbisenc
	Update for 0.10 way of getting static pad templates
	* pitivi/ui/plumber.py:
	Don't use gconf if it's not available
	If the videosink has the "force-aspect-ratio" property, use it.
	* pitivi/ui/timelineobjects.py:
	cleanup
	* pitivi/ui/viewer.py:
	Aspect ratio for the Viewer Window is updated on the fly.
	Make the EncodingDialog work with gstreamer 0.10 api

2005-12-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline.py:
	Fix for new gnonlin api
