@@ -8,7 +8,7 @@ AUTHORS=$srcdir/AUTHORS
 
 AC_SUBST(PYGTK_REQ, 2.8.0)
 AC_SUBST(PYGST_REQ, 0.10.0)
-AC_SUBST(PYGNOME_REQ, 2.12.0)
+AC_SUBST(PYGNOME_REQ, 2.10.0)
 AC_SUBST(GST_REQ, 0.10.0)
 AC_SUBST(GNONLIN_REQ, 0.10.0.3)
 
